<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:contentPaddingTop="2dp"
    app:contentPaddingBottom="8dp"
    app:cardBackgroundColor="@color/partially_transparent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="30"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iconImageView"
            app:layout_constraintBottom_toBottomOf="@id/iconImageView"/>
        <TextView
            android:id="@+id/dayMonthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="мая"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/dateTextView"
            app:layout_constraintTop_toTopOf="@id/iconImageView"
            app:layout_constraintBottom_toBottomOf="@id/iconImageView"/>
        <TextView
            android:id="@+id/dayWeekTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Пн"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/dayMonthTextView"
            app:layout_constraintTop_toTopOf="@id/iconImageView"
            app:layout_constraintBottom_toBottomOf="@id/iconImageView"/>
        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:src="@drawable/weather_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/weather_icon"/>
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="небольшая облачность"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/iconImageView"
            app:layout_constraintTop_toTopOf="@id/iconImageView"
            app:layout_constraintBottom_toBottomOf="@id/iconImageView"/>
        <TextView
            android:id="@+id/morningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dayTextView"
            app:layout_constraintTop_toBottomOf="@id/iconImageView"/>
        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/morningTextView"
            app:layout_constraintEnd_toStartOf="@id/eveningTextView"
            app:layout_constraintTop_toBottomOf="@id/iconImageView"/>
        <TextView
            android:id="@+id/eveningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/dayTextView"
            app:layout_constraintEnd_toStartOf="@id/nightTextView"
            app:layout_constraintTop_toBottomOf="@id/iconImageView" />
        <TextView
            android:id="@+id/nightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/eveningTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconImageView"/>
        <TextView
            android:id="@+id/tempMorningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12°C"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/morningTextView"
            app:layout_constraintEnd_toEndOf="@id/morningTextView"
            app:layout_constraintTop_toBottomOf="@id/morningTextView" />
        <TextView
            android:id="@+id/tempDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="18°C"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/dayTextView"
            app:layout_constraintEnd_toEndOf="@id/dayTextView"
            app:layout_constraintTop_toBottomOf="@id/dayTextView"/>
        <TextView
            android:id="@+id/tempEveningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="18°C"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/eveningTextView"
            app:layout_constraintEnd_toEndOf="@id/eveningTextView"
            app:layout_constraintTop_toBottomOf="@id/eveningTextView"/>
        <TextView
            android:id="@+id/tempNightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15°C"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/nightTextView"
            app:layout_constraintEnd_toEndOf="@id/nightTextView"
            app:layout_constraintTop_toBottomOf="@id/nightTextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>