<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:background="@drawable/image_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Москва"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-thin"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/searchImageView"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_baseline_search_24"
                    android:contentDescription="@string/search_icon"/>
            </androidx.appcompat.widget.Toolbar>
            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                tools:src="@drawable/weather_icon"
                app:layout_constraintEnd_toStartOf="@id/space"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:contentDescription="@string/weather_icon"/>
            <Space
                android:id="@+id/space"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="небольшая облачность"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintStart_toEndOf="@id/space"
                app:layout_constraintTop_toTopOf="@id/iconImageView"
                app:layout_constraintBottom_toBottomOf="@id/iconImageView"/>
            <TextView
                android:id="@+id/tempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="18°C"
                android:textSize="80sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconImageView"/>
            <TextView
                android:id="@+id/feelsLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ощущается как 16°C"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintTop_toBottomOf="@id/tempTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                android:id="@+id/firstLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/feelsLikeTextView">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_item"
                    android:padding="8dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/sunrise"
                        android:contentDescription="@string/sunrise"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/sunriseTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="05:00"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/sunset"
                        android:contentDescription="@string/sunset"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/sunsetTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="21:00"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@drawable/bg_item">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/wind"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/wind"/>
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="4dp"
                        app:layout_constraintTop_toBottomOf="@id/imageView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                    <TextView
                        android:id="@+id/windTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="5.7м/с"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toBottomOf="@id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                    <ImageView
                        android:id="@+id/degImageView"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginStart="4dp"
                        tools:src="@drawable/ic_baseline_south_west_24"
                        app:layout_constraintStart_toEndOf="@id/windTextView"
                        app:layout_constraintTop_toTopOf="@id/windTextView"
                        app:layout_constraintBottom_toBottomOf="@id/windTextView"
                        android:contentDescription="@string/wind_direction"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/secondLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstLinearLayout">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_item"
                    android:padding="8dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pressure"
                        android:contentDescription="@string/pressure"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/pressureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="750мм.рт.ст."
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/humidity"
                        android:contentDescription="@string/humidity"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/humidityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="65%" />
                </LinearLayout>
                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/visibility"
                        android:contentDescription="@string/visibility"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/visibilityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="10km"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourForecastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                tools:listitem="@layout/item_hour_forecast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondLinearLayout"
                app:layout_constraintBottom_toTopOf="@id/forecastButton"/>
            <Button
                android:id="@+id/forecastButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/daily_forecast"
                android:background="@drawable/bg_item"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hourForecastRecyclerView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>